Change button and fix hero subtext visibility

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h1 {
-    font-size: 58px;
+    font-size: 64px;
     font-weight: 900;
     color: var(--white);
 }
@@ -37,12 +37,13 @@ h3 {
 }
 
 button {
-    padding: 7px 34px;
+    width: 17rem;
+    padding: 15px 0;
     color: var(--white);
-    font-size: 22px;
+    font-size: 28px;
     font-weight: 700;
-    background: var(--blue);
-    border: none;
+    background: none;
+    border: 3px solid var(--white);
     border-radius: 10px;
     cursor: pointer;
 }
@@ -60,8 +61,8 @@ i {
 /* header and navbar */
 #header {
     width: 100%;
-    padding-top: 11px;
-    padding-bottom: 7px;
+    margin: 0;
+    padding: 13px 2.5rem 7px;
     display: flex;
     justify-content: space-between;
     background: var(--dark);
@@ -112,7 +113,8 @@ i {
 }
 
 #hero-subtext {
-    font-size: 24px;
+    font-size: 32px;
+    -webkit-text-stroke: 0.2px black;
     color: var(--gray-one);
 }
 
